--- a/_includes/nav_links_footer.html
+++ b/_includes/nav_links_footer.html
@@ -9,4 +9,5 @@
 <li class="nav-link"><a href="{{ "/podporuji-nas/" | prepend: site.baseurl }}">Podporují nás</a></li>
 <li class="nav-link"><a href="https://drive.google.com/file/d/1UXRELeYZ-LrueOUXhsH4oeARrw-RxgZs/view?usp=sharing">Pedagogická koncepce</a></li>
 <li class="nav-link"><a href="{{ "/stanovy/" | prepend: site.baseurl }}">Stanovy spolku</a></li>
+<li class="nav-link"><a href="https://drive.google.com/file/d/12hHzXutCWPJzNcDY-TpkEW9jFsH2tzJW/view?usp=sharing">Provozní řád</a></li>
 <li class="nav-link"><a href="{{ "/komunitni-zahrada/" | prepend: site.baseurl }}">Komunitní zahrada</a></li>
